--- a/assets/theme.css
+++ b/assets/theme.css
@@ -7,7 +7,7 @@
   border: none;
   line-height: calc(1.25rem + 4px);
   font-size: 20px;
-  text-shadow: 0 1px 3px rgba(0,0,0,.3);
+  /* text-shadow: 0 1px 3px rgba(0,0,0,.3); */
   margin-bottom: 20px;
   margin-right: 10px;
   color: white;
